[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Solitaire.gd" type="Script" id=1]
[ext_resource path="res://source_content/textures/table_large.png" type="Texture" id=3]
[ext_resource path="res://entities/resolve_btn.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/card_holder.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

class_name solitaire


func _init():
	pass
"

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
script = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="stack_holders" type="Node2D" parent="."]

[node name="stack_card_holder_0" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 45, 283 )
holder_type = 0

[node name="stack_card_holder_1" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 198, 283 )
holder_type = 0

[node name="stack_card_holder_2" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 349, 283 )
holder_type = 0

[node name="stack_card_holder_3" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 501, 283 )
holder_type = 0

[node name="stack_card_holder_4" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 652, 283 )
holder_type = 0

[node name="stack_card_holder_5" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 805, 283 )
holder_type = 0

[node name="stack_card_holder_6" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 956, 283 )
holder_type = 0

[node name="stack_card_holder_7" parent="stack_holders" instance=ExtResource( 5 )]
position = Vector2( 1109, 283 )
holder_type = 0

[node name="tmp_holders" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="tmp_card_holder_0" parent="tmp_holders" instance=ExtResource( 5 )]
position = Vector2( 46, 19 )

[node name="tmp_card_holder_1" parent="tmp_holders" instance=ExtResource( 5 )]
position = Vector2( 198, 19 )

[node name="tmp_card_holder_2" parent="tmp_holders" instance=ExtResource( 5 )]
position = Vector2( 350, 19 )

[node name="resolved_holders" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="flower_resolved_card_holder" parent="resolved_holders" instance=ExtResource( 5 )]
position = Vector2( 614, 19 )
holder_type = 1

[node name="green_resolved_card_holder" parent="resolved_holders" instance=ExtResource( 5 )]
position = Vector2( 806, 19 )
holder_type = 2

[node name="red_resolved_card_holder" parent="resolved_holders" instance=ExtResource( 5 )]
position = Vector2( 1109, 19 )
holder_type = 2

[node name="white_resolved_card_holder" parent="resolved_holders" instance=ExtResource( 5 )]
position = Vector2( 957, 19 )
holder_type = 2

[node name="resolved_btns" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="red_resolve_btn" parent="resolved_btns" instance=ExtResource( 4 )]
position = Vector2( 497, 18 )

[node name="green_resolve_btn" parent="resolved_btns" instance=ExtResource( 4 )]
position = Vector2( 497, 101 )
btn_type = 1

[node name="white_resolve_btn" parent="resolved_btns" instance=ExtResource( 4 )]
position = Vector2( 497, 184 )
btn_type = 2

[node name="discard" parent="." instance=ExtResource( 5 )]
position = Vector2( -100, -200 )

[node name="deal_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="redeal_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="deal_timer" to="." method="_on_deal_timer_timeout"]
[connection signal="timeout" from="redeal_timer" to="." method="_on_redeal_timer_timeout"]
